--- a/RentalProject/RentalProject/ClientApp/package.json
+++ b/RentalProject/RentalProject/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^4.0.0",
     "axios": "^0.19.2",
     "babel-eslint": "10.0.1",
     "bootstrap": "^4.1.3",
