--- a/RentalProject/RentalProject/ClientApp/package.json
+++ b/RentalProject/RentalProject/ClientApp/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.26.12",
     "axios": "^0.19.2",
     "bootstrap": "^4.1.3",
+    "history": "^4.10.1",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
